--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "homepage": "https://jordynmcginnis.com",
   "dependencies": {
     "react": "^16.3.2",
-    "react-dom": "^16.3.2",
-    "react-responsive-carousel": "^3.1.45"
+    "react-dom": "^16.3.2"
   },
   "devDependencies": {
     "gh-pages": "^1.1.0",
