--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "homepage": "https://jordynmcginnis.com",
   "dependencies": {
     "react": "^16.3.2",
-    "react-dom": "^16.3.2"
+    "react-dom": "^16.3.2",
+    "react-icons": "^3.3.0"
   },
   "devDependencies": {
     "gh-pages": "^1.1.0",
